# Parley

./: .env.example  .gitignore  README.md  import_timing.txt  pyproject.toml
audio/: capture.py  list_devices.py
docs/: architecture.html  architecture.md  project_info.md
knowledge/: deals.json  policy.json  store.py
llm/: client.py  prompts.py
overlay/: app.js  index.html  style.css
server/: main.py  models.py
stt/: deepgram_stream.py  router.py  whisper_local.py
trigger/: detector.py  embeddings.py  keywords.py
