[project]
name = "parley"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb",
    "deepgram-sdk>=7.3.0",
    "fastapi>=0.136.3",
    "faster-whisper>=1.2.1",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "scipy>=1.17.1",
    "sentence-transformers>=5.5.1",
    "sounddevice>=0.5.5",
    "spacy>=3.8.14",
    "uvicorn[standard]>=0.48.0",
    "websockets>=16.0",
]
