[project]
name = "parley"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "deepgram-sdk>=7.3.0",
    "fastapi>=0.136.3",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.6.1",
    "sounddevice>=0.5.5",
    "uvicorn[standard]>=0.48.0",
    "websockets>=16.0",
]
